# br_code_search

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
eval/: README.md  baseline-v0.10.0.json  baseline-v0.11.0.json  baseline-v0.12.0.json  baseline-v0.13.0.json  baseline-v0.14.0.json  baseline-v0.4.7.json  baseline-v0.5.0.json  baseline-v0.6.0.json  baseline-v0.7.0.json  baseline-v0.8.0.json  baseline-v0.9.0.json  retrieval_queries.json
src/br_code_search/: __init__.py  cli.py  core.py  evaluation.py  mcp_server.py  provenance.py  qdrant.py  semantic.py  toolchain.py
tests/: test_core.py  test_evaluation.py  test_mcp_server.py  test_provenance.py  test_semantic.py  test_toolchain.py
